[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/images/Player/mageidle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://src/images/Player/mage_run.png" type="Texture" id=3]
[ext_resource path="res://src/images/Player/mage jump.png" type="Texture" id=4]
[ext_resource path="res://src/images/Player/mage falling.png" type="Texture" id=5]
[ext_resource path="res://scenes/Global/stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Global/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/sounds/jump/jump6.wav" type="AudioStream" id=8]
[ext_resource path="res://src/sounds/steps/footsteps2.wav" type="AudioStream" id=9]
[ext_resource path="res://src/sounds/steps/footsteps3.wav" type="AudioStream" id=10]
[ext_resource path="res://src/sounds/steps/footsteps1.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=24]
radius = 5.0
height = 14.0

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 4, 10.5 )

[sub_resource type="Gradient" id=26]
offsets = PoolRealArray( 0, 0.268293, 0.701219, 1 )
colors = PoolColorArray( 0.054902, 0.054902, 0.054902, 0, 3, 3, 3, 1, 3, 3, 3, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=27]
gradient = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=25]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 27 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "falling"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "falling"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/falling/node = SubResource( 7 )
states/falling/position = Vector2( 480, 363 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 191, 150 )
states/jump/node = SubResource( 9 )
states/jump/position = Vector2( 540, 125 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 179, 353 )
transitions = [ "idle", "jump", SubResource( 11 ), "jump", "idle", SubResource( 12 ), "idle", "run", SubResource( 13 ), "run", "idle", SubResource( 14 ), "run", "falling", SubResource( 15 ), "falling", "run", SubResource( 16 ), "jump", "falling", SubResource( 17 ), "falling", "idle", SubResource( 18 ), "jump", "run", SubResource( 19 ), "run", "jump", SubResource( 20 ) ]
start_node = "idle"
graph_offset = Vector2( -130, 96 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="GDScript" id=28]
script/source = "extends Node2D


onready var parent = get_parent()

func _ready():
	change_weapon(load(\"res://scenes/Staffs/Staff.tscn\"), global_position)

	
func change_weapon(new_weapon, pos):
	if new_weapon != null:
		var weapon_container = get_tree().get_nodes_in_group('weaponContainer')[0]
		var weapons = weapon_container.get_children()
		for w in weapons:
			w.queue_free()
		var n_weapon = new_weapon.instance()
		n_weapon.position = pos

		weapon_container.add_child(n_weapon)


func _physics_process(_delta):
	if parent.sprite.flip_h:
		position = Vector2(0 + 5, -1)
	else:
		position = Vector2(0 - 5, -1)
		
	
"

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
collision_layer = 16
collision_mask = 32
monitoring = false
invinsibility_time = 0.5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.125 )
shape = SubResource( 23 )

[node name="footprints" type="Particles2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
position = Vector2( 0, 12 )
emitting = false
amount = 32
local_coords = false
process_material = SubResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/falling = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 6 )
anims/run = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="stats" parent="." instance=ExtResource( 6 )]

[node name="DownRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 11 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 3

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( -5, -1 )
z_index = 1
script = SubResource( 28 )

[node name="JumpTimeout" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="sounds" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "SFX"

[node name="footsteps" type="Node" parent="sounds"]

[node name="footsteps1" type="AudioStreamPlayer" parent="sounds/footsteps"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[node name="footsteps2" type="AudioStreamPlayer" parent="sounds/footsteps"]
stream = ExtResource( 9 )
volume_db = -10.0
bus = "SFX"

[node name="footsteps3" type="AudioStreamPlayer" parent="sounds/footsteps"]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "SFX"

[connection signal="noHealth" from="stats" to="." method="_on_stats_noHealth"]

[editable path="HurtBox"]
